[package]
name = "imagod-spec-formal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false

[dependencies]
imagod-spec = { workspace = true }
nirvash-core = { workspace = true }
nirvash-macros = { workspace = true }

[build-dependencies]
nirvash-docgen = { workspace = true }
