[package]
name = "imagod-spec-formal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false

[dependencies]
imagod-spec = { workspace = true }
nirvash = { workspace = true }
nirvash-check = { workspace = true }
nirvash-conformance = { workspace = true }
nirvash-lower = { workspace = true }
nirvash-macros = { workspace = true }

[build-dependencies]
nirvash-docgen = { workspace = true }

[dev-dependencies]
nirvash-proof = { workspace = true }
