[package]
name = "imagod-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nirvash-core = { workspace = true }
nirvash-macros = { workspace = true }
imago-protocol = { workspace = true }
imagod-config = { workspace = true }
imagod-ipc = { workspace = true }
