[package]
name = "imagod-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false

[dependencies]
nirvash = { workspace = true }
nirvash-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
ciborium = { workspace = true }
