[package]
name = "imagod"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
[features]
default = ["runtime-wasmtime"]
runtime-wasmtime = ["imagod-runtime/runtime-wasmtime"]

[lib]
name = "imagod"
path = "src/lib.rs"

[[bin]]
name = "imagod"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
imago-plugin-imago-admin = { workspace = true }
imago-plugin-imago-experimental-gpio = { workspace = true }
imago-plugin-imago-experimental-i2c = { workspace = true }
imago-plugin-imago-node = { workspace = true }
imago-plugin-imago-usb = { workspace = true }
imagod-config = { workspace = true }
imagod-control = { workspace = true }
imagod-runtime = { workspace = true }
imagod-server = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
web-transport-quinn = { workspace = true }
