[package]
name = "imagod"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
build = "build.rs"

[features]
default = ["runtime-wasmtime"]
runtime-wasmtime = ["imagod-runtime/runtime-wasmtime"]
wasi-nn-cvitek = ["runtime-wasmtime", "imagod-runtime/wasi-nn-cvitek"]
wasi-nn-openvino = ["runtime-wasmtime", "imagod-runtime/wasi-nn-openvino"]
wasi-nn-onnx = ["runtime-wasmtime", "imagod-runtime/wasi-nn-onnx"]

[lib]
name = "imagod"
path = "src/lib.rs"

[[bin]]
name = "imagod"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
imago-plugin-imago-admin = { workspace = true }
imago-plugin-imago-experimental-gpio = { workspace = true }
imago-plugin-imago-experimental-i2c = { workspace = true }
imago-plugin-imago-node = { workspace = true }
imago-plugin-imago-usb = { workspace = true }
imago-protocol = { workspace = true }
imagod-config = { workspace = true }
imagod-common = { workspace = true }
imagod-control = { workspace = true }
imagod-runtime = { workspace = true }
imagod-server = { workspace = true }
libc = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "io-util"] }
ureq = { workspace = true }
web-transport-quinn = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
