[package]
name = "nirvash-backends"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nirvash = { workspace = true }
nirvash-lower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
z3 = { workspace = true }

[dev-dependencies]
nirvash-check = { workspace = true }
nirvash-ir = { workspace = true }
nirvash-macros = { workspace = true }
