[package]
name = "nirvash-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
nirvash = { workspace = true }
nirvash-check = { workspace = true }
nirvash-lower = { workspace = true }

[dev-dependencies]
loom = { workspace = true }
proptest = { workspace = true }
