[package]
name = "nirvash-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[[test]]
name = "code_witness_history_names"
path = "tests/code_witness_history_names.rs"
harness = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
nirvash-conformance = { workspace = true }
nirvash = { workspace = true }
nirvash-check = { workspace = true }
nirvash-lower = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = { workspace = true }
