[package]
name = "nirvash-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[features]
default = []
loom = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
nirvash-conformance = { workspace = true }
nirvash = { workspace = true }
nirvash-check = { workspace = true }
nirvash-lower = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = { workspace = true }
