[package]
name = "nirvash"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = []
checker-tests = []

[dependencies]
inventory = { workspace = true }
nirvash-foundation = { workspace = true }
serde = { workspace = true, features = ["derive"] }
