[package]
name = "nanokvm-imagod"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
autobins = false

[[bin]]
name = "imagod"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
imago-plugin-nanokvm-plugin = { workspace = true }
imagod = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
