[package]
name = "local-imagod-plugin-native-experimental-gpio-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "local-imagod-plugin-native-experimental-gpio-app"
path = "src/main.rs"

[dependencies]
wasi = "0.14.7"
wit-bindgen = "0.53.1"
